--- a/inner-sanctum.html
+++ b/inner-sanctum.html
@@ -21,10 +21,11 @@
             color: var(--text-main);
             margin: 0;
             display: flex;
-            font-family: -apple-system, BlinkMacSystemFont, "SF Pro", sans-serif;
-            overflow: hidden;
+            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; /* 본문은 헬베티카 */
             -webkit-font-smoothing: antialiased;
-        }
+        }nav h2, nav a, header h1, section h3 {
+    font-family: 'Caesar Dressing', cursive !important;
+}
 
         /* Sidebar Index */
         nav {
