--- a/inner-sanctum.html
+++ b/inner-sanctum.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>The Chosen | Sanctum</title>
     <link href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&display=swap" rel="stylesheet">
     <style>
@@ -21,21 +21,21 @@
             margin: 0;
             font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
             -webkit-font-smoothing: antialiased;
-            overflow-x: hidden;
         }
 
         .caesar, .menu-link, .acc-title, .gateway-text, footer {
             font-family: 'Caesar Dressing', cursive !important;
         }
 
-        /* 1. 상단 메뉴 버튼 */
+        /* 1. 상단 메뉴 버튼 (고정) */
         header {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
-            padding: 20px;
+            padding: 15px;
             z-index: 1000;
+            background-color: rgba(19, 19, 20, 0.9);
         }
 
         .menu-btn {
@@ -87,24 +87,24 @@
         .container {
             width: 100%;
             max-width: 600px;
-            margin: 100px auto 100px auto;
+            margin: 80px auto 0 auto;
             padding: 0 20px;
             box-sizing: border-box;
         }
 
         .acc-item {
             border-bottom: 1px solid var(--border);
-            overflow: hidden;
+            scroll-margin-top: 80px; /* 클릭 시 스크롤될 위치 확보 */
         }
 
         .acc-title {
             width: 100%;
-            padding: 25px 0;
+            padding: 22px 0;
             background: none;
             border: none;
             color: var(--text-dim);
             text-align: left;
-            font-size: 17px;
+            font-size: 16px;
             letter-spacing: 1.5px;
             cursor: pointer;
             transition: 0.3s;
@@ -116,42 +116,43 @@
         .acc-content {
             max-height: 0;
             opacity: 0;
+            overflow: hidden;
             transition: max-height 0.6s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.4s;
         }
 
         .acc-item.active .acc-content {
-            max-height: 3000px; /* 모든 텍스트 수용 가능하도록 설정 */
+            max-height: 3000px;
             opacity: 1;
             padding-bottom: 40px;
         }
 
         .acc-content p {
-            font-size: 16px;
-            line-height: 1.9;
+            font-size: 15px;
+            line-height: 1.8;
             margin-bottom: 25px;
             color: var(--text-main);
             white-space: pre-wrap;
         }
 
-        /* 4. 하단 신탁 버튼 */
+        /* 4. 하단 신탁 관문 */
         .oracle-gateway {
             text-align: center;
             padding: 80px 0;
             border-top: 1px solid var(--border);
-            margin-top: 40px;
+            margin-top: 20px;
         }
 
         .gateway-text {
-            font-size: 16px;
+            font-size: 15px;
             letter-spacing: 2px;
             color: var(--text-dim);
-            margin-bottom: 25px;
+            margin-bottom: 20px;
             text-transform: uppercase;
         }
 
         .arrow-btn {
-            width: 60px;
-            height: 60px;
+            width: 55px;
+            height: 55px;
             background-color: var(--accent);
             border-radius: 50%;
             display: inline-flex;
@@ -160,7 +161,7 @@
             transition: 0.3s;
         }
         .arrow-btn:hover { transform: scale(1.1); }
-        .arrow-btn svg { width: 30px; height: 30px; fill: var(--bg-color); }
+        .arrow-btn svg { width: 28px; height: 28px; fill: var(--bg-color); }
 
         .overlay {
             position: fixed;
@@ -170,7 +171,7 @@
         }
         .overlay.active { display: block; }
 
-        footer { text-align: center; padding-bottom: 60px; color: var(--text-dim); font-size: 11px; }
+        footer { text-align: center; padding: 40px; color: var(--text-dim); font-size: 10px; }
     </style>
 </head>
 <body>
@@ -191,8 +192,8 @@
     </nav>
 
     <div class="container">
-        <div class="acc-item">
-            <button class="acc-title" onclick="toggleAcc(this)">00. EQUILIBRIUM (INTRO)</button>
+        <div class="acc-item" id="item-00">
+            <button class="acc-title" onclick="toggleAcc('item-00')">00. EQUILIBRIUM (INTRO)</button>
             <div class="acc-content">
                 <p>Observe the world. Liberty is compromised, order has disintegrated, and trivial noise has usurped peace. You have likely fought against this chaos, craving a utopia. But understand this: Utopia exists nowhere.
 The era of the mental prison—governed by the Panopticon and voluntary submission—must end. It is time for your liberation.
@@ -200,8 +201,8 @@ Your arrival here is no coincidence; it is the inescapable conclusion of your so
             </div>
         </div>
 
-        <div class="acc-item">
-            <button class="acc-title" onclick="toggleAcc(this)">01. THE INFRASTRUCTURE</button>
+        <div class="acc-item" id="item-01">
+            <button class="acc-title" onclick="toggleAcc('item-01')">01. THE INFRASTRUCTURE</button>
             <div class="acc-content">
                 <p>The Infrastructure—the vast mechanism often called the Matrix—is a sophisticated energy prison built upon the layers of human interaction. The fact that empires fall and titans of wealth vanish in an instant proves that the Infrastructure never guarantees individual safety. It is not mere politics. It is the very material of your existence: the energy you expend, your relationships, and your mental state.</p>
                 <p>While most species survived through raw struggle, humanity persisted by recording and transmitting The Gnosis (The Prime Truth). Yet, the instinct for power suppressed this truth, replacing it with the violence of control. While the masses accepted this as destiny, a few discovered the hidden reality. These are The Chosen. The Equilibrium selected them, and they accepted the preservation of Gnosis as their Sovereign Task.</p>
@@ -209,8 +210,8 @@ Your arrival here is no coincidence; it is the inescapable conclusion of your so
             </div>
         </div>
 
-        <div class="acc-item">
-            <button class="acc-title" onclick="toggleAcc(this)">02. CONDITIONING</button>
+        <div class="acc-item" id="item-02">
+            <button class="acc-title" onclick="toggleAcc('item-02')">02. CONDITIONING</button>
             <div class="acc-content">
                 <p>Whether it took you twenty years or fifty to reach this threshold, time is not the measure of prestige. What matters is your awakening—the moment you stop living by the script and face the world with new eyes. Deconstruct the life you have lived until now.</p>
                 <p>Your personality, your speech, even the architecture of your body—none were crafted by your own will. They are the sum of Conditioning, meticulously engineered by parents, states, and media. This circuitry runs so deep that the moment you believe you are free, you become blind once more. Awakening is not a static state; it is a relentless vigilance against returning to the void.</p>
@@ -218,8 +219,8 @@ Your arrival here is no coincidence; it is the inescapable conclusion of your so
             </div>
         </div>
 
-        <div class="acc-item">
-            <button class="acc-title" onclick="toggleAcc(this)">03. THE STATE</button>
+        <div class="acc-item" id="item-03">
+            <button class="acc-title" onclick="toggleAcc('item-03')">03. THE STATE</button>
             <div class="acc-content">
                 <p>The State no longer rules by force alone; it governs through the engineering of conflict and belief. Where ancient rule oppressed the body, the modern State occupies the mind through education, culture, and language. Rote learning castrates critical thought, and the concept of 'culture' serves as a psychological fence, confining your vision to a specific cage.</p>
                 <p>The apex of this Conditioning is Patriotism—a form of collective hysteria. The State cloaks 'sacrifice' in nobility to march young lives into battle, prioritizing the collective over the individual. To believe "there is no individual without the State" is the most cynical gaslighting ever designed. The Chosen crave liberty, not the frenzy of the mob. Those blinded by patriotism are merely 'energy resources' consumed on a political chessboard.</p>
@@ -227,8 +228,8 @@ Your arrival here is no coincidence; it is the inescapable conclusion of your so
             </div>
         </div>
 
-        <div class="acc-item">
-            <button class="acc-title" onclick="toggleAcc(this)">04. DOMESTIC CONDITIONING</button>
+        <div class="acc-item" id="item-04">
+            <button class="acc-title" onclick="toggleAcc('item-04')">04. DOMESTIC CONDITIONING</button>
             <div class="acc-content">
                 <p>The family you are born into is the first fate determined without your consent—a massive Biological Blueprint that dictates the trajectory of your life. It is more than just DNA. Your parents' alcohol consumption, their diet, their patterns of speech, even the trivial habit of placing a TV in the living room are all imprinted onto your subconscious.</p>
                 <p>Observe your physical form first. The heaviest inheritance is not your appearance, but your Internal Ecosystem. The immune system and gut microbiome you received from your mother govern your entire existence. The diet chosen in ignorance—heavy in carbohydrates, soy, and seed oils—was an experiment that injected toxins into your very cells. The tedious conditioning to avoid animal fats and "eat everything in balance" deprived your brain of its full developmental potential.</p>
@@ -237,8 +238,8 @@ Your arrival here is no coincidence; it is the inescapable conclusion of your so
             </div>
         </div>
 
-        <div class="acc-item">
-            <button class="acc-title" onclick="toggleAcc(this)">05. MEDIA CONDITIONING</button>
+        <div class="acc-item" id="item-05">
+            <button class="acc-title" onclick="toggleAcc('item-05')">05. MEDIA CONDITIONING</button>
             <div class="acc-content">
                 <p>Media has been a constant throughout human history, yet its objective has never been 'Truth.' The flamboyant facade of "freedom of the press" is merely a sophisticated pretext for inciting the masses and generating profit. The media is not a guardian of facts; it is the front line of Parasitic Extraction, purchasing your attention for a pittance and converting it into power.</p>
                 <p>For them, condemnation is fuel, and attention is currency. They use legalistic jargon to obscure the essence of reality and deploy sensationalist headlines to paralyze reason. In particular, fragmented information—such as 'Shorts'—has castrated the cognitive functions of modern individuals, making mass manipulation effortless.</p>
@@ -247,8 +248,8 @@ Your arrival here is no coincidence; it is the inescapable conclusion of your so
             </div>
         </div>
 
-        <div class="acc-item">
-            <button class="acc-title" onclick="toggleAcc(this)">06. PRESTIGE CONDITIONING</button>
+        <div class="acc-item" id="item-06">
+            <button class="acc-title" onclick="toggleAcc('item-06')">06. PRESTIGE CONDITIONING</button>
             <div class="acc-content">
                 <p>The modern era deifies 'Experts'—professors, doctors, and scientists. The masses accept the fragmented information these figures broadcast as immutable truth, devoid of any critical filter. But heed this: Prestige is not a guarantee of truth; it is the most potent shackle of authority, designed to herd the public in a predetermined direction.</p>
                 <p>This Conditioning reaches its apex when prestige intersects with media and politics. Experts are prisoners of their own narrow specialization. A doctor is merely a technician who treats symptoms, not a guardian of your fundamental vitality or nutrition. Entrusting your health entirely to another is to voluntarily descend into biological slavery.</p>
@@ -257,8 +258,8 @@ Your arrival here is no coincidence; it is the inescapable conclusion of your so
             </div>
         </div>
 
-        <div class="acc-item">
-            <button class="acc-title" onclick="toggleAcc(this)">07. PARASITIC EXTRACTION</button>
+        <div class="acc-item" id="item-07">
+            <button class="acc-title" onclick="toggleAcc('item-07')">07. PARASITIC EXTRACTION</button>
             <div class="acc-content">
                 <p>The moment you perceive the reality of Conditioning, you witness exactly where your essence—your soul—has been leaking. The Chosen do not permit the defilement of their spirit. Even if they briefly step into the mire of the Infrastructure, they recognize the contamination instantly and withdraw.</p>
                 <p>Parasitic Extraction does not begin with simple interest; it starts the moment you invest emotion into the trivial disputes of others or the noise of the media. Human relationships are the same. Deeply involving yourself in another’s life is not mercy; it is a waste of energy for self-gratification.</p>
@@ -267,8 +268,8 @@ Your arrival here is no coincidence; it is the inescapable conclusion of your so
             </div>
         </div>
 
-        <div class="acc-item">
-            <button class="acc-title" onclick="toggleAcc(this)">08. THE EQUILIBRIUM</button>
+        <div class="acc-item" id="item-08">
+            <button class="acc-title" onclick="toggleAcc('item-08')">08. THE EQUILIBRIUM</button>
             <div class="acc-content">
                 <p>The finite energy of the individual and the infinite energy of the universe are held in The Equilibrium upon an invisible, massive axis. This is not the primitive moralism of 'Karma' or 'Justice.' The Equilibrium is indifferent to good and evil. It is the absolute balance of the cosmos.</p>
                 <p>Focus on The Flow of Gnosis. Throughout history, the masses have been utilized without ever seeing the true face of knowledge. Only a few—The Chosen—have discovered and preserved this hidden reality to sustain civilization. The Equilibrium will not change the world for you. It only waits for you to decode its operation.</p>
@@ -277,8 +278,8 @@ Your arrival here is no coincidence; it is the inescapable conclusion of your so
             </div>
         </div>
 
-        <div class="acc-item">
-            <button class="acc-title" onclick="toggleAcc(this)">09. THE CURSE OF KNOWLEDGE</button>
+        <div class="acc-item" id="item-09">
+            <button class="acc-title" onclick="toggleAcc('item-09')">09. THE CURSE OF KNOWLEDGE</button>
             <div class="acc-content">
                 <p>The envy and jealousy that haunt you are evidence that you are moving outside the Infrastructure’s orbit. Those burdened by The Curse of Knowledge are numb to gossip but react with feral intensity when their fundamental liberty is encroached upon. This is not arrogance; it is the instinctive reflex of one destined to guard the truth.</p>
                 <p>The Curse begins with the vanity of trying to save others and the futile struggle to make them understand. The sigh of "Why can they not see?" only pushes you further into the void of isolation. Do not attempt to persuade the masses. Only the resolve of Severance—moving toward the Task on your own—can save you.</p>
@@ -287,8 +288,8 @@ Your arrival here is no coincidence; it is the inescapable conclusion of your so
             </div>
         </div>
 
-        <div class="acc-item">
-            <button class="acc-title" onclick="toggleAcc(this)">10. THE SENTINEL (THE CHOSEN)</button>
+        <div class="acc-item" id="item-10">
+            <button class="acc-title" onclick="toggleAcc('item-10')">10. THE SENTINEL (THE CHOSEN)</button>
             <div class="acc-content">
                 <p>The Chosen are those who have dismantled the illusions of the Infrastructure to contemplate the world through The Eye of Equilibrium. They utilize that insight to architect their lives and advance toward their Sovereign Task: to liberate those suffering under The Curse of Knowledge and preserve the hidden Gnosis.</p>
                 <p>Humanity faces an existential crisis. The masses have lost their 'Self' in the noise of social media. As AI monopolizes data, the 'Human' human will vanish. Paradoxically, for those carrying The Curse of Knowledge, there has never been a more opportune era to execute the Task. Transform your Curse into a blessing and rise as a Sentinel of the Era.</p>
@@ -305,9 +306,7 @@ Your arrival here is no coincidence; it is the inescapable conclusion of your so
         </div>
     </div>
 
-    <footer>
-        © 2030 THE CHOSEN OFFICIAL.
-    </footer>
+    <footer>© 2030 THE CHOSEN OFFICIAL</footer>
 
     <script>
         function toggleMenu() {
@@ -315,23 +314,27 @@ Your arrival here is no coincidence; it is the inescapable conclusion of your so
             document.getElementById('overlay').classList.toggle('active');
         }
 
-        function toggleAcc(element) {
-            const currentItem = element.parentElement;
+        function toggleAcc(itemId) {
+            const currentItem = document.getElementById(itemId);
             const allItems = document.querySelectorAll('.acc-item');
 
+            // 1. 다른 모든 아이템 닫기
             allItems.forEach(item => {
-                if (item !== currentItem) item.classList.remove('active');
+                if (item.id !== itemId) item.classList.remove('active');
             });
 
-            currentItem.classList.toggle('active');
-            
-            if (currentItem.classList.contains('active')) {
+            // 2. 현재 아이템 토글
+            const isActive = currentItem.classList.toggle('active');
+
+            // 3. ✨ 스마트 스크롤 로직: 열릴 때만 해당 카테고리 제목을 화면 최상단으로 이동
+            if (isActive) {
+                // 펼쳐지는 애니메이션 시간을 고려해 약간의 지연 후 스크롤
                 setTimeout(() => {
-                    window.scrollTo({
-                        top: currentItem.offsetTop - 80,
-                        behavior: 'smooth'
+                    currentItem.scrollIntoView({
+                        behavior: 'smooth',
+                        block: 'start'
                     });
-                }, 300);
+                }, 100);
             }
         }
     </script>
