--- a/vortex.html
+++ b/vortex.html
@@ -1,90 +1,83 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Chosen | Sky-Blue Silver Rain</title>
+    <title>The Chosen | Binary Typing Rain</title>
     <style>
         body {
             margin: 0;
             padding: 0;
-            background-color: #000; /* 깊은 검은색 배경 */
-            overflow: hidden; /* 스크롤바 숨김 */
+            background-color: #000;
+            overflow: hidden;
             height: 100vh;
         }
         canvas {
-            display: block; /* 캔버스 하단 공백 제거 */
+            display: block;
         }
     </style>
 </head>
 <body>
 
-<canvas id="digitalRain"></canvas>
+<canvas id="typingRain"></canvas>
 
 <script>
-    const canvas = document.getElementById('digitalRain');
+    const canvas = document.getElementById('typingRain');
     const ctx = canvas.getContext('2d');
 
-    // 캔버스 크기를 화면 전체로 설정하는 함수
-    function resizeCanvas() {
+    function resize() {
         canvas.width = window.innerWidth;
         canvas.height = window.innerHeight;
     }
 
-    // 초기 캔버스 크기 설정 및 화면 크기 변경 시 대응
-    window.addEventListener('resize', resizeCanvas);
-    resizeCanvas();
+    window.addEventListener('resize', resize);
+    resize();
 
-    // 디지털 레인 설정
-    const characters = '01'; // 이진법 숫자
-    const fontSize = 14; // 글자 크기 (모바일에 적합하게 조정)
-    let columns = canvas.width / fontSize; // 화면 너비에 따른 열의 수 계산
-    const drops = []; // 각 열의 현재 위치(y좌표)를 저장할 배열
+    const characters = '01';
+    const fontSize = 16; // 가독성을 위해 살짝 키움
+    let columns = Math.floor(canvas.width / fontSize);
+    const drops = [];
 
-    // 초기 위치 설정 (모두 화면 위에서 시작)
+    // 초기화: 각 열의 시작 위치를 랜덤하게 분산시켜 '타이핑'이 동시에 일어나지 않게 함
     for (let i = 0; i < columns; i++) {
-        drops[i] = 1;
+        drops[i] = Math.random() * -20; 
     }
 
-    // 색상 팔레트 (은은한 스카이블루 실버)
+    // ✨ 색상 설정: 오리엔트 스카이블루 실버
     const colors = [
-        'rgba(135, 206, 235, 0.7)', // 부드러운 스카이블루
-        'rgba(176, 196, 222, 0.7)', // 라이트 스틸 블루
-        'rgba(192, 192, 192, 0.6)'  // 은은한 실버
+        'rgba(165, 201, 225, 0.8)', // Sky Blue Silver
+        'rgba(209, 232, 247, 0.9)', // Bright Silver
+        'rgba(135, 206, 235, 0.7)'  // Deep Sky Blue
     ];
 
-    // 애니메이션 그리기 함수
     function draw() {
-        // 이전 프레임의 잔상을 남기기 위해 반투명한 검은색으로 덮음
-        // 투명도(0.05)를 조절하여 잔상의 길이를 변경할 수 있습니다.
-        ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
+        // ✨ 잔상 효과 조절: 숫자가 더 오래 보이도록 배경 투명도를 낮춤 (0.05 -> 0.03)
+        ctx.fillStyle = 'rgba(0, 0, 0, 0.03)';
         ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-        ctx.font = fontSize + 'px monospace'; // 고정폭 글꼴 사용
+        ctx.font = `bold ${fontSize}px monospace`;
 
-        // 각 열에 대해 글자 그리기
         for (let i = 0; i < drops.length; i++) {
-            // 랜덤한 숫자 선택
             const text = characters.charAt(Math.floor(Math.random() * characters.length));
             
-            // 랜덤한 색상 선택 (너무 반짝이지 않게 투명도 조절됨)
+            // 랜덤 색상 선택
             ctx.fillStyle = colors[Math.floor(Math.random() * colors.length)];
             
-            // 글자 그리기 (x좌표: 열 인덱스 * 글자 크기, y좌표: 현재 위치 * 글자 크기)
+            // 글자 그리기
             ctx.fillText(text, i * fontSize, drops[i] * fontSize);
 
-            // 글자가 화면 아래로 내려가고 랜덤한 조건이 맞으면 위치를 맨 위로 초기화
-            if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
+            // ✨ 타이핑 느낌을 위한 초기화 조건
+            if (drops[i] * fontSize > canvas.height && Math.random() > 0.98) {
                 drops[i] = 0;
             }
 
-            // 다음 글자를 위해 위치를 아래로 이동
+            // 아래로 이동
             drops[i]++;
         }
     }
 
-    // 50ms마다 draw 함수 실행 (애니메이션 속도 조절)
-    setInterval(draw, 50);
+    // ✨ 속도 조절: 기존 50ms에서 120ms로 대폭 늦춤 (타이핑 속도와 유사)
+    setInterval(draw, 120);
 
 </script>
 
