--- a/inner-sanctum.html
+++ b/inner-sanctum.html
@@ -9,11 +9,8 @@
         :root {
             --bg-color: #131314;
             --card-bg: #1e1f20;
-            --text-main: #e3e3e3;
-            --text-dim: #8e8e93;
-            --accent: #ffffff;
             --border: #333;
-            --header-h: 80px; /* 타이틀 공간을 위해 살짝 높임 */
+            --header-h: 80px;
             --nav-h: 55px;
             /* ✨ 스카이블루 실버 팔레트 */
             --silver-light: #FFFFFF;
@@ -21,34 +18,8 @@
             --silver-dark: #708090;
         }
 
-        body {
-            background-color: var(--bg-color);
-            color: var(--text-main);
-            margin: 0;
-            /* ✨ 전체 서체 Pirata One 적용 */
-            font-family: 'Pirata One', system-ui;
-            -webkit-font-smoothing: antialiased;
-            overflow-x: hidden;
-        }
-
-        /* 1. 상단 고정 헤더: 중앙 타이틀 + 우측 메뉴 */
-        header {
-            position: fixed;
-            top: 0; left: 0; width: 100%;
-            height: var(--header-h);
-            z-index: 4000;
-            background-color: var(--bg-color);
-            display: flex;
-            align-items: center;
-            justify-content: center; /* 타이틀 중앙 정렬 */
-            padding: 0 20px;
-            box-sizing: border-box;
-        }
-
-        /* ✨ 실버 광택 타이틀 (사이즈 축소 버전) */
-        header .logo {
-            font-size: 26px;
-            letter-spacing: 4px;
+        /* ✨ 공통 실버 광택 스타일 (제목용 그라데이션) */
+        .silver-luster-text {
             background: linear-gradient(
                 to bottom,
                 var(--silver-light) 0%,
@@ -59,111 +30,140 @@
             );
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            filter: drop-shadow(0 0 5px rgba(165, 201, 225, 0.3));
+            filter: drop-shadow(0 0 3px rgba(165, 201, 225, 0.3));
         }
 
+        /* ✨ 공통 실버 메탈릭 스타일 (본문용 단색 광택) */
+        .silver-metallic-text {
+            color: var(--silver-mid) !important;
+            text-shadow: 0 0 1px rgba(165, 201, 225, 0.5);
+        }
+
+        body {
+            background-color: var(--bg-color);
+            margin: 0;
+            font-family: 'Pirata One', system-ui;
+            -webkit-font-smoothing: antialiased;
+            overflow-x: hidden;
+        }
+
+        /* 1. 상단 고정 헤더 */
+        header {
+            position: fixed;
+            top: 0; left: 0; width: 100%;
+            height: var(--header-h);
+            z-index: 4000;
+            background-color: var(--bg-color);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0 20px;
+            box-sizing: border-box;
+        }
+
+        /* ✨ 타이틀: 대소문자 변경 + 그라데이션 광택 적용 */
+        header .logo {
+            font-size: 32px; /* Pirata One 특성상 조금 더 키움 */
+            letter-spacing: 2px;
+            /* 기존 text-transform: uppercase 제거 */
+        }
+        /* .logo에 silver-luster-text 클래스 적용 예정 */
+
+        /* 햄버거 버튼도 실버로 통일 */
         .menu-btn {
-            position: absolute;
-            right: 20px;
+            position: absolute; right: 20px;
             background: none; border: none; cursor: pointer;
             display: flex; flex-direction: column; gap: 6px;
         }
-        .menu-btn span { display: block; width: 20px; height: 2px; background-color: var(--text-main); }
+        .menu-btn span { 
+            display: block; width: 20px; height: 2px; 
+            background-color: var(--silver-mid); /* 실버 적용 */
+            box-shadow: 0 0 2px rgba(165, 201, 225, 0.5);
+        }
 
-        /* 컴팩트 메뉴 */
+        /* 컴팩트 메뉴 링크 실버 적용 */
         .compact-menu {
-            position: fixed;
-            top: 70px; right: 20px;
+            position: fixed; top: 70px; right: 20px;
             background-color: var(--card-bg);
             border: 1px solid var(--border);
-            border-radius: 12px;
-            padding: 10px;
-            display: none;
-            z-index: 4500;
+            border-radius: 12px; padding: 10px;
+            display: none; z-index: 4500;
         }
         .compact-menu.active { display: block; }
         .compact-menu a {
-            display: block; color: var(--text-dim); text-decoration: none;
+            display: block; text-decoration: none;
             font-size: 18px; padding: 10px 15px;
         }
+        /* .compact-menu a 에 silver-metallic-text 적용 예정 */
 
-        /* 2. 상단 고정 드롭다운 */
+        /* 2. 상단 드롭다운 실버 적용 */
         .sticky-nav {
-            position: fixed;
-            top: var(--header-h);
-            left: 0; width: 100%;
-            height: var(--nav-h);
-            background-color: var(--bg-color);
-            border-bottom: 1px solid var(--border);
-            z-index: 3000;
-            display: flex; align-items: center; justify-content: center;
+            position: fixed; top: var(--header-h); left: 0; width: 100%; height: var(--nav-h);
+            background-color: var(--bg-color); border-bottom: 1px solid var(--border);
+            z-index: 3000; display: flex; align-items: center; justify-content: center;
             padding: 0 15px; box-sizing: border-box;
         }
-
         select {
-            width: 100%; max-width: 450px;
-            padding: 8px;
-            background-color: var(--card-bg);
-            border: 1px solid var(--border);
-            border-radius: 8px;
-            color: var(--silver-mid);
-            font-size: 16px;
-            font-family: 'Pirata One', cursive;
-            outline: none;
-            appearance: none;
-            text-align: center;
+            width: 100%; max-width: 450px; padding: 8px;
+            background-color: var(--card-bg); border: 1px solid var(--border);
+            border-radius: 8px; font-size: 16px;
+            font-family: 'Pirata One', cursive; outline: none; appearance: none; text-align: center;
         }
+        /* select에 silver-metallic-text 적용 예정 */
 
-        /* 3. 메인 본문: 대소문자 유지 */
+        /* 3. 메인 본문 */
         main {
-            width: 90%;
-            max-width: 650px;
+            width: 90%; max-width: 650px;
             margin: calc(var(--header-h) + var(--nav-h) + 30px) auto 60px auto;
         }
-
         .doctrine-content { display: none; line-height: 1.8; animation: fadeIn 0.4s ease; }
         .doctrine-content.active { display: block; }
-
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
+        /* 제목(h3)에 그라데이션 광택 적용 */
         h3 { 
-            font-size: 24px; color: var(--silver-mid); 
-            margin-bottom: 25px; text-align: center; 
-            letter-spacing: 1px;
-            /* text-transform: uppercase 제거하여 대소문자 보존 */
+            font-size: 26px; margin-bottom: 25px; text-align: center; letter-spacing: 1px;
         }
-        p { font-size: 17px; margin-bottom: 20px; white-space: pre-wrap; color: var(--text-main); }
+        /* h3에 silver-luster-text 적용 예정 */
+
+        /* 본문(p)에 메탈릭 단색 적용 */
+        p { font-size: 18px; margin-bottom: 20px; white-space: pre-wrap; }
+        /* p에 silver-metallic-text 적용 예정 */
 
         /* 4. 하단 관문 */
         #oracle-gateway {
             display: none; text-align: center; padding: 50px 0;
             border-top: 1px solid var(--border); margin-top: 40px;
         }
-        .gateway-text { font-size: 18px; color: var(--text-dim); margin-bottom: 20px; }
+        .gateway-text { font-size: 18px; margin-bottom: 20px; }
+        /* .gateway-text에 silver-metallic-text 적용 예정 */
+
         .arrow-btn {
             width: 50px; height: 50px; background-color: var(--silver-mid);
             border-radius: 50%; display: inline-flex; align-items: center; justify-content: center;
+            box-shadow: 0 0 10px rgba(165, 201, 225, 0.3); /* 버튼 자체 발광 */
         }
         .arrow-btn svg { width: 24px; height: 24px; fill: var(--bg-color); }
 
-        footer { text-align: center; padding: 30px; color: var(--text-dim); font-size: 12px; }
+        footer { text-align: center; padding: 30px; font-size: 12px; }
+        /* footer에 silver-metallic-text 적용 예정 */
     </style>
 </head>
 <body>
 
     <header>
-        <div class="logo">THE CHOSEN</div>
+        <div class="logo silver-luster-text">The Chosen</div>
         <button class="menu-btn" onclick="toggleMenu()">
             <span></span><span></span><span></span>
         </button>
         <div class="compact-menu" id="compactMenu">
-            <a href="inner-sanctum.html" style="color: var(--silver-mid);">Doctrine</a>
-            <a href="oracle-form.html">Oracle</a>
+            <a href="inner-sanctum.html" class="silver-metallic-text">Doctrine</a>
+            <a href="oracle-form.html" class="silver-metallic-text">Oracle</a>
         </div>
     </header>
 
     <div class="sticky-nav">
-        <select id="chapterSelector" onchange="changeChapter(this.value)">
+        <select id="chapterSelector" onchange="changeChapter(this.value)" class="silver-metallic-text">
             <option value="intro">00. Equilibrium (Intro)</option>
             <option value="ch1">01. The Infrastructure</option>
             <option value="ch2">02. Conditioning</option>
@@ -180,33 +180,33 @@
 
     <main>
         <section id="intro" class="doctrine-content active">
-            <h3>00. Equilibrium</h3>
-            <p>Observe the world. Liberty is compromised, order has disintegrated, and trivial noise has usurped peace. You have likely fought against this chaos, craving a utopia. But understand this: Utopia exists nowhere.
+            <h3 class="silver-luster-text">00. Equilibrium</h3>
+            <p class="silver-metallic-text">Observe the world. Liberty is compromised, order has disintegrated, and trivial noise has usurped peace. You have likely fought against this chaos, craving a utopia. But understand this: Utopia exists nowhere.
 The era of the mental prison—governed by the Panopticon and voluntary submission—must end. It is time for your liberation.
 Your arrival here is no coincidence; it is the inescapable conclusion of your solitary struggle. The Curse of Knowledge is not a source of suffering, but the necessary ritual for your awakening. Open The Eye of Equilibrium. Witness the moment your curse is forged into a blessing.</p>
         </section>
 
         <section id="ch1" class="doctrine-content">
-            <h3>01. The Infrastructure</h3>
-            <p>The Infrastructure—the vast mechanism often called the Matrix—is a sophisticated energy prison built upon the layers of human interaction. The fact that empires fall and titans of wealth vanish in an instant proves that the Infrastructure never guarantees individual safety. It is not mere politics. It is the very material of your existence: the energy you expend, your relationships, and your mental state.</p>
-            <p>While most species survived through raw struggle, humanity persisted by recording and transmitting The Gnosis (The Prime Truth). Yet, the instinct for power suppressed this truth, replacing it with the violence of control. While the masses accepted this as destiny, a few discovered the hidden reality. These are The Chosen. The Equilibrium selected them, and they accepted the preservation of Gnosis as their Sovereign Task.</p>
+            <h3 class="silver-luster-text">01. The Infrastructure</h3>
+            <p class="silver-metallic-text">The Infrastructure—the vast mechanism often called the Matrix—is a sophisticated energy prison built upon the layers of human interaction. The fact that empires fall and titans of wealth vanish in an instant proves that the Infrastructure never guarantees individual safety. It is not mere politics. It is the very material of your existence: the energy you expend, your relationships, and your mental state.</p>
+            <p class="silver-metallic-text">While most species survived through raw struggle, humanity persisted by recording and transmitting The Gnosis (The Prime Truth). Yet, the instinct for power suppressed this truth, replacing it with the violence of control. While the masses accepted this as destiny, a few discovered the hidden reality. These are The Chosen. The Equilibrium selected them, and they accepted the preservation of Gnosis as their Sovereign Task.</p>
         </section>
 
         <section id="ch10" class="doctrine-content">
-            <h3>10. The Sentinel</h3>
-            <p>The Chosen are those who have dismantled the illusions of the Infrastructure to contemplate the world through The Eye of Equilibrium. They utilize that insight to architect their lives and advance toward their Sovereign Task: to liberate those suffering under The Curse of Knowledge and preserve the hidden Gnosis.</p>
-            <p>Humanity faces an existential crisis. The masses have lost their 'Self' in the noise of social media. As AI monopolizes data, the 'Human' human will vanish. Paradoxically, for those carrying The Curse of Knowledge, there has never been a more opportune era to execute the Task. Transform your Curse into a blessing and rise as a Sentinel of the Era.</p>
+            <h3 class="silver-luster-text">10. The Sentinel</h3>
+            <p class="silver-metallic-text">The Chosen are those who have dismantled the illusions of the Infrastructure to contemplate the world through The Eye of Equilibrium. They utilize that insight to architect their lives and advance toward their Sovereign Task: to liberate those suffering under The Curse of Knowledge and preserve the hidden Gnosis.</p>
+            <p class="silver-metallic-text">Humanity faces an existential crisis. The masses have lost their 'Self' in the noise of social media. As AI monopolizes data, the 'Human' human will vanish. Paradoxically, for those carrying The Curse of Knowledge, there has never been a more opportune era to execute the Task. Transform your Curse into a blessing and rise as a Sentinel of the Era.</p>
         </section>
 
         <div id="oracle-gateway">
-            <div class="gateway-text">Have you absorbed the truth?</div>
+            <div class="gateway-text silver-metallic-text">Have you absorbed the truth?</div>
             <a href="oracle-form.html" class="arrow-btn">
                 <svg viewBox="0 0 24 24"><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/></svg>
             </a>
         </div>
     </main>
 
-    <footer>© 2030 THE CHOSEN OFFICIAL</footer>
+    <footer class="silver-metallic-text">© 2030 THE CHOSEN OFFICIAL</footer>
 
     <script>
         function toggleMenu() {
