--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         
         .arrow-login svg { width: 18px; height: 18px; fill: var(--gemini-bg); }
 
-        .buy-ticket {
+        .Decide-yourFuture {
             display: block;
             text-decoration: none;
             font-size: 16px;
@@ -114,7 +114,7 @@
             font-family: 'Pirata One', cursive;
         }
 
-        .buy-ticket:hover { opacity: 1; text-decoration: underline; color: var(--silver-light); }
+        .Decide-yourFuture:hover { opacity: 1; text-decoration: underline; color: var(--silver-light); }
     </style>
 </head>
 <body>
@@ -127,7 +127,7 @@
                 <svg viewBox="0 0 24 24"><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/></svg>
             </button>
         </div>
-        <a href="https://opensea.io/" target="_blank" class="buy-ticket">BUY TICKET</a>
+        <a href="https://opensea.io/" target="_blank" class="Decide-yourFuture">Decide Your Future</a>
     </div>
 
     <script>
